# ProgectCPP_BMP_Redactor

./: DNALabs.md  INTERNAL_DOC.md  README.md  Technical_Assignment_GOST.md
DATA/: CPP_Style_Guide.md  F_Proto.md  M_Def_Out_of_the_Class.md  Plan_Referata.md  VSCODE_CPP_MACOS.md  Zagolovok_H_CPP.md
image_processor/: CMakeLists.txt  Color.cpp  Image.cpp  ImageProcessor.h  Parser.cpp  Parser.h  Reader.cpp  Reader.h  Utils.h  Writer.cpp  Writer.h  color.h  filter.cpp  filter.h  image.h  image_processor.cpp
